# ifascada

./: .gitignore  Cargo.toml  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml
.sqlx/: config.toml  query-04541376a311eb42d15d64979d3a652016c5d7d19852b8361c472f4bbe47e93c.json  query-06108a95c73509906ce4fc57bd96bf70cfab7880fd323f7fa4b5e325b96b9e3a.json  query-2ccd8dc094a57ab2bd4ccd848bdb7a0a73300f240fa472a7fc2d7e74fbd49829.json  query-34da9fb25e75d452c3e6f38d354d15f3cb53670dc15751306cbac6cf2db82fcd.json  query-366a64107a3e09afef046f239bed01a514172be145a3d963b6e9b81675cc3ebc.json  query-47f734869669986aac1679b62a53d7221e3da6877e9988169038eace76b1de1d.json  query-699e0ed91bfff7714ccede716cf21eef9ff329c7be640be37587500419a281ce.json  query-70e7dad56c1deeb4d0cde9943fe6b2767a4ee71c67851598c9ecfead18e848bd.json  query-83f956950b0bfe30314e588a6dd535a577cc9c8e0b4021e79c403f24e8c51c0b.json  query-af583e147bddb54d813e396fa28cc7fe9bebc5035596d28a80bb90dae3f29e49.json
config/: default.toml  last_known.json  test_mixed_features.json  test_rs232_features.json
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/automation/: engine.rs  executor.rs  mod.rs
crates/application/src/device/: device_actor.rs  manager.rs  mod.rs
crates/application/src/messaging/: command_listener.rs  mod.rs
crates/application/src/printer/: batch_manager.rs  builder.rs  manager.rs  mod.rs
crates/application/src/tag/: executor_manager.rs  mod.rs  tag_executor.rs  tag_pipeline.rs
crates/application/tests/: automation_test.rs  batch_logic_test.rs  printer_test.rs  resilience_tests.rs  tag_executor_pipeline_integration.rs  tag_executor_tests.rs
crates/central-server/: Cargo.toml
crates/central-server/src/: api.rs  lib.rs  main.rs  state.rs
crates/central-server/src/services/: config_service.rs  mod.rs
crates/central-server/tests/: config_sync_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: automation.rs  error.rs  lib.rs  printer.rs
crates/domain/src/device/: entity.rs  mod.rs  repository.rs
crates/domain/src/driver/: connection_state.rs  device_driver.rs  driver_connection.rs  driver_type.rs  mod.rs
crates/domain/src/event/: mod.rs  publisher.rs
crates/domain/src/tag/: aggregate.rs  entity.rs  mod.rs  pipeline.rs  quality.rs  repository.rs  status.rs  tag_id.rs  update_mode.rs  value.rs  value_type.rs
crates/edge-agent/: Cargo.toml
crates/edge-agent/config/: default.toml  last_known.json  test_rs232_full_scale.json
crates/edge-agent/data/: test-agent-01_buffer.db  test-agent-01_storage.db  test-agent-rs232_buffer.db  test-agent-rs232_storage.db
crates/edge-agent/docs/: CONFIGURATION.md  DEPLOYMENT.md
crates/edge-agent/src/: config_manager.rs  main.rs
crates/edge-agent/tests/: config_subscriber_test.rs
crates/infrastructure/: Cargo.toml  test_buffer_1dfac2d3-ab53-4953-a061-0e45567a5541.db  test_buffer_2fe3bd01-4841-40d8-852a-7d6c5c513bbd.db  test_buffer_88dddadf-1d11-4ddb-8473-289634583612.db  test_buffer_d4f71769-4411-4926-abcc-d1812baa78a9.db  test_buffer_e60a1092-fe80-4708-86da-f7f17ed2dc85.db
crates/infrastructure/examples/: reset_db_state.rs  run_migrations.rs
crates/infrastructure/src/: config.rs  lib.rs  pipeline.rs
crates/infrastructure/src/database/: device_repository.rs  event_publisher.rs  mod.rs  sqlite_buffer.rs
crates/infrastructure/src/database/entities/: devices.rs  edge_agents.rs  mod.rs  reports.rs  tag_history.rs  tags.rs
crates/infrastructure/src/database/tag_repository/: mod.rs  postgres_tag_repository.rs  sea_orm_tag_repository.rs
crates/infrastructure/src/drivers/: device_simulator.rs  mod.rs  modbus.rs  rs232.rs  simulator_connection.rs
crates/infrastructure/src/messaging/: buffered_publisher.rs  composite_publisher.rs  database_publisher.rs  mod.rs  mqtt_client.rs  mqtt_publisher.rs
crates/infrastructure/src/printer/: file_printer.rs  mock_printer.rs  mod.rs  network_printer.rs
crates/infrastructure/src/repositories/: config_repository.rs  db_config_repository.rs  mod.rs
crates/infrastructure/tests/: buffered_publisher_tests.rs  scale_parser_tests.rs  tag_repository_tests.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240101_000001_initial_setup.rs
docs/: system_configuration_reference.md
migrations/: 001_initial_schema_v2.sql  002_seed_v2.sql  003_add_pipeline_config.sql  20260210_001_create_tags_schema.sql  20260211_002_create_events_table.sql  20260212_003_add_pipeline_config.sql  20260213_create_tag_events_table.sql  20260214_001_enforce_tag_events_fk.sql  20260215_001_flexible_tag_events.sql  202602161048_agent_monitoring_policy.sql  202602161245_flexible_report_items.sql  20260216_001_create_reports_schema.sql  20260218_add_printer_config.sql  _mark_applied.sql.bak
mosquitto/data/: mosquitto.db
scripts/: migrate.ps1  seed.ps1  seed_composite.sql  seed_demo_scales.sql  seed_simulation.sql  seed_test_rs232_full_scale.sql
tools/: fake_printer.ps1
web-dashboard/: README.md  angular.json  package-lock.json  package.json
web-dashboard/src/: styles.css
web-dashboard/src/app/: app.component.ts  app.routes.ts
web-dashboard/src/app/components/events-log/: events-log.component.ts
web-dashboard/src/app/components/monitor/: monitor.component.ts
web-dashboard/src/app/components/reports/: reports.component.ts
web-dashboard/src/app/components/tag-history/: tag-history.component.ts
web-dashboard/src/app/components/trend-chart/: trend-chart.component.css  trend-chart.component.html  trend-chart.component.ts
web-dashboard/src/app/services/: scada.service.ts  sse.service.ts
