[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/central-server",
    "crates/edge-agent",
    "crates/migration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["IFA SCADA Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (PostgreSQL 18 compatible)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Web framework
axum = "0.8"

# Async utilities
async-trait = "0.1"

# Serial communication
tokio-serial = "5.4"

# Testing
mockall = "0.13"
